--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> -->
 	</head>
 
 	<body>
@@ -14,9 +14,9 @@
 				<ul>
 					<li class="nav"><a href=""> gallery </a></li>
 					<li class="nav"><a href=""> portfolio </a></li>
-					<li class="nav"><a href=""> drop down </a></li>
-					<li class="nav"><a href=""> full width </a></li>
-					<li class="nav"><a href=""> style demo </a></li>
+					<li class="nav"><a href=""> dropdown </a></li>
+					<li class="nav"><a href=""> fullwidth </a></li>
+					<li class="nav"><a href=""> styledemo </a></li>
 					<li class="active nav" id="position_fix"><a href=""> Home </a></li>
 				</ul>
 
@@ -55,7 +55,7 @@
 			<h1 class="title">LATEST WORK</h1>
 		</div>
 
-		<div class="content">
+		<div class="content" style="display: inline-block; padding: 0px 0px 40px 0px; margin: 0px auto 0px auto">
 			<img src="images/i1.jpg" class="imgs">
 			<img src="images/i2.jpg" class="imgs">
 			<img src="images/i3.jpg" class="imgs">
