Created initial design of the image slider + nav bar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="content">
 					<img src="" alt="arrow here" id="slider_arrow_left">
 					
-					<p class="slider_text"><span id="slider_title">Cursus Penati<br>Saccum nalla.</span><br>Nullam sollicitudin et est at congue. Nulla pretium mi ante, placerat tempus lacinia blandit, fringilla sed sem. Nunc ullamcorper libero arcu, at commodo neque euismod vel. Nulla pretium mi ante donec id cursus neque. Pellentesque dictum in magna id semper. Duis iculis get mi eget leo.<br><span id="slider_read" class="active">Read More Here »</span></p>
+					<p class="slider_text"><span id="slider_title">Cursus Penati<br>Saccum nalla.</span><br>Nullam sollicitudin et est at congue. Nulla pretium mi ante, placerat tempus lacinia blandit, fringilla sed sem. Nunc ullamcorper libero arcu, at commodo neque euismod vel. Nulla pretium mi ante donec id cursus neque. Pellentesque dictum in magna id semper. Duis iculis get mi eget leo.<br><span><a href="" id="slider_read" class="active">Read More Here »</a></span></p>
 
 					<img src="images/bg1.jpg" alt="Main Image Here" id="slider_img">
 
