Changes in styling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 						<li class="nav"><a href="#"> dropdown </a></li>
 						<li class="nav"><a href="#"> gallery </a></li>
 						<li class="nav"><a href="#"> portfolio </a></li>
-						<li class="nav"><a href="#"> fullwidth </a></li>
-						<li class="nav"><a href="#"> styledemo </a></li>
+						<li class="nav"><a href="#"> full width </a></li>
+						<li class="nav"><a href="#"> style demo </a></li>
 						<li class="active nav" id="position_fix"><a href="#"> Home </a></li>
 					</ul>
 
@@ -28,7 +28,7 @@
 				<div class="content">
 					<img src="" alt="arrow here" id="slider_arrow_left">
 					
-					<p class="slider_text"><span id="slider_title">Cursus Penati<br>Saccum nalla.</span><br>Nullam sollicitudin et est at congue. Nulla pretium mi ante, placerat tempus lacinia blandit, fringilla sed sem. Nunc ullamcorper libero arcu, at commodo neque euismod vel. Nulla pretium mi ante donec id cursus neque. Pellentesque dictum in magna id semper. Duis iculis get mi eget leo.<br><span><a href="#" id="slider_read" class="active">Read More Here »</a></span></p>
+					<p class="slider_text"><span id="slider_title">Cursus Penati<br>Saccum nalla.</span><br>Nullam sollicitudin et est at congue. Nulla pretium mi ante, placerat tempus lacinia blandit, fringilla sed sem. Nunc ullamcorper libero arcu, at ante donec id cursus neque. Pellentesque dictum in magna id semper. Duis iculis get mi eget leo.<br><span><a href="#" id="slider_read" class="active">Read More Here »</a></span></p>
 
 					<img src="images/Layer 1.png" alt="Main Image Here" id="slider_img">
 
@@ -104,9 +104,9 @@
 					<h4 class="footer_head">Contact Us</h4>
 					<form method="post" action="">
 						<input class="input" type="text" name="name" placeholder="Full Name">
-						<input class="input" type="email" name="email" placeholder="Email Address">
+						<input class="input" type="email" name="email" required placeholder="Email Address">
 						<input class="input" type="text" name="subject" placeholder="Subject">
-						<textarea id="message" placeholder="Message"></textarea>
+						<textarea id="message" name="message" required placeholder="Message"></textarea>
 						<br>
 						<input type="submit" name="submit" value="Submit" id="submit" class="active">
 					</form>
@@ -125,9 +125,10 @@
 
 
 <!-- - form validation
+- imagew slider	
 - image slider arrows
 - fixed nav bar
 - drop down list
 - image captions
-- slider spacing
+- *slider spacing
  -->
