--- a/index.html
+++ b/index.html
@@ -36,27 +36,25 @@
 					<h5 class="header_text">Free PSD Website Template</h5>
 				</div>
 			</div>
-			<!-- <div style="background-color: blue;"> -->
-				<div class="content">
-					<button  class="slider_arrow" id="slider_arrow_left">
+				<div class="content" style="position: relative; bottom: -135px; ">
+					<button  class="slider_arrow" id="slider_arrow_left" onclick="slidePrev()">
 						<img src="images/arrow_left.png" alt="arrow here">
 					</button>
 
 					<div class="slider_content">
 						<p class="slider_text"><span id="slider_title">Cursus Penati<br>Saccum nalla.</span><br>Nullam sollicitudin et est at congue. Nulla pretium mi ante, placerat tempus lacinia blandit, fringilla sed sem. Nunc ullamcorper libero arcu, at ante donec id cursus neque. Pellentesque dictum in magna id semper. Duis iculis get mi eget leo.<br><span><a href="#" id="slider_read" class="active">Read More Here »</a></span></p>
 
-						<img src="images/Layer 1.png" alt="Main Image Here" id="slider_img">
+						<img src="images/1.png" alt="Main Image Here" id="slider_image" class="slider_img">
 					</div>
 					
-					<button class="slider_arrow" id="slider_arrow_right">
+					<button class="slider_arrow" id="slider_arrow_right" onclick="slideNext()">
 						<img src="images/arrow_right.png" alt="arrow here">
 					</button>
 				</div>	
-			<!-- </div> -->
 		</div>
 
 		<div class="content">
-			<div class="cards clear" style="clear: right;"><a class="card_link" href="#">
+			<div class="cards clear clear2"><a class="card_link" href="#">
 				<img src="images/p1.png" alt="Not Found" class="card_icon">
 				<h1 class="card_heading">service<br>title</h1>
 				<p class="card_text">Lorem ipsum dolor sit amet, sed do eiusmod tempor et dolore magna aliqua</p>
@@ -85,7 +83,7 @@
 
 		<div class="images">
 			<div class="content">
-				<figure class="figures" onclick="test();">
+				<figure class="figures">
 					<img src="images/i1.jpg" class="imgs">
 					<figcaption>Lorem Ipsum Dolor</figcaption>
 				</figure>
@@ -140,7 +138,7 @@
 					<h4 class="footer_head">Contact Us</h4>
 					<form name="contactForm" method="post" action="" onsubmit="return validateForm()">
 						<input class="input" type="text" name="name" placeholder="Full Name">
-						<input class="input" type="email" name="email" placeholder="Email Address">
+						<input class="input" type="text" name="email" placeholder="Email Address">
 						<input class="input" type="text" name="subject" placeholder="Subject">
 						<textarea id="message" name="message" placeholder="Message"></textarea>
 						<br>
@@ -160,12 +158,6 @@
 </html>
 
 
-<!-- - form validation
-- image slider	
-- form validation
-- **image slider arrows
+<!--
 - fixed nav bar
-- **drop down list
-- **image captions
-- **slider spacing
  -->
